Slider render is implemented, order filter render also done. TODO: make image overlap and solve task with order filter and starships placement

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 @media only screen and (min-width: 360px) and (max-width: 799px) {
     #app {
-        margin: 50px 10px;
+        margin: 50px 0px;
     }
     .menu {
         display: none;
@@ -143,7 +143,6 @@
     }
     .head-text-container {
         width: 90vw;
-        transform: translateY(15px);
     }
     .head-text {
         font-size: 15.9vw;
@@ -153,6 +152,10 @@
 @media only screen and (min-width: 640px) {
     .head-translated-container {
         transform: translateY(5.0vw);
+    }
+    .order-filter-container {
+        margin-left: 10px;
+        margin-bottom: 50px;
     }
     .head-img-container {
         width: 35vw;
@@ -176,6 +179,90 @@
     margin-right: 60px;
 }
 
+@media only screen and (min-width: 360px) and (max-width: 640px) {
+    .starships {
+        display: block;
+        margin-top: 42px;
+        margin-right: 0px;
+    }
+    .filters-container {
+        margin-left: 0px;
+        width: auto;
+    }
+    .order-filter-wrapper {
+        margin-left: 10px;
+    }
+    .our-starships-label {
+        writing-mode: horizontal-tb;
+        transform: inherit;
+        margin-top: 0px;
+        font-size: 14px;
+        line-height: 15px;
+    }
+    .apply-filters {
+        text-align: center;
+        margin-top: 25px;
+    }
+    .order-filter-container {
+        margin-bottom: 26px;
+        margin-top: 37px;
+    }
+    .starships {
+        width: 345px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .starship {
+        width: 334px;
+        margin-left: 0;
+    }
+    .starships-list {
+        margin: 0 auto;
+    }
+    .starship-name-container {
+        width: 100%
+    }
+    .filters-info {
+        display: flex;
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    .our-starships-label {
+        writing-mode: vertical-rl;
+        transform: rotate(180deg);
+        font-size: 24px;
+        line-height: 26px;
+        height: 100px;
+        margin: 0;
+        margin-top: 150px;
+    }
+    .filters-container {
+        margin-left: 50px;
+        width: 350px;
+        height: fit-content;
+        height: -moz-fit-content;
+    }
+    .apply-filters {
+        display: none;
+    }
+    .filters-info {
+        display: none;
+    }
+    .starships-list {
+        margin-left: 10px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .starship {
+        width: 233px;
+        margin-left: 25px;
+    }
+    .order-filter-wrapper {
+        margin-left: auto;
+    }
+}
+
 .starships-container {
     display: flex;
     align-items: stretch;
@@ -186,9 +273,10 @@
 
 .order-filter-container {
     flex-basis: 100%;
-    text-align: right;
     font-family: Courier;
     align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 .order-filter {
@@ -196,20 +284,69 @@
     font-size: 16px;
     line-height: 18px;
     align-items: center;
+    font-weight: bold;
+    /*background: url("white-arrow.jpg") 96% / 15% no-repeat #212121;*/
+    color: #FFFFFF;
+    text-transform: uppercase;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: fit-content;
+    width: -moz-fit-content;
+}
+
+div.order-filter p {
+    font-family: Courier;
+    font-weight: bold;
     padding-left: 18px;
     padding-top: 9px;
     padding-bottom: 9px;
+    padding-right: 18px;
+    display: none;
+}
+
+.selected {
+    display: block !important;
+}
+
+.order-filter-arrow {
+    display: flex;
+    align-items: center;
+}
+
+.order-filter-wrapper {
+    display: flex;
+    width: -moz-fit-content;
+    width: fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
     font-weight: bold;
-    background-color: #212121;
-    color: #FFFFFF;
-    text-transform: uppercase;
-    height: 58px;
+    background: #212121;
     border: 1px black solid;
     border-radius: 3px;
-    margin-bottom: 50px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+}
+
+.order-arrow {
+    margin-left: 20px;
+    margin-right: 25px;
+    display: inline-block;
+    vertical-align: middle;
+    height: auto;
+}
+
+.selected-order-filter {
+    display: block !important;
+}
+
+.order-option {
+    display: none;
+}
+
+.filter-mobile-button-container {
+    content: url("filter-mobile-button.png");
+}
+
+.filters-apply-count {
+    margin-right: 5px;
 }
 
 .our-starships-label-container {
@@ -218,31 +355,30 @@
 }
 
 .our-starships-label {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    font-size: 24px;
-    line-height: 26px;
     text-transform: uppercase;
-    height: 100px;
-    margin: 0;
-    margin-top: 150px;
 }
 
 /* GENERAL FILTER STYLES */
 
 .filters-container {
-    margin-left: 50px;
     border: 1px solid #EAEAEA;
     box-sizing: border-box;
     border-radius: 3px;
-    width: 350px;
-    height: fit-content;
-    height: -moz-fit-content;
+    width: 345px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.apply-filters {
+    margin-top: 26px;
+    width: 100%;
 }
 
 .ship-filter {
     margin-left: 32px;
     margin-right: 32px;
+    width: 100%;
 }
 
 .filter-header {
@@ -304,15 +440,18 @@
     margin-top: 15px;
 }
 
-.load-pilots-label {
+.bold-blue-text {
     margin-top: 25px;
     font-family: Courier;
     font-size: 14px;
     line-height: 16px;
-    display: flex;
+    font-weight: bold;
     align-items: center;
     text-transform: capitalize;
+    color: #0066FF;
 }
+
+.load-pilots-label {}
 
 /* PILOTS FILTER STYLE END */
 
@@ -348,6 +487,7 @@
     position: relative;
     margin-top: 20px;
     margin-bottom: 20px;
+    height: 20px;
 }
 
 .slider-line {
@@ -367,24 +507,16 @@
     border-radius: 50%;
 }
 
-.slider-selected-line-gap {
-
-}
+.slider-selected-line-gap {}
 
 /* SLIDER STYLES END */
 
 /* STARSHIP CARDS STYLES */
 
-.starships-list {
-    margin-left: 10px;
-    display: flex;
-    flex-wrap: wrap;
-}
+.starships-list {}
 
 .starship {
-    width: 233px;
     height: auto;
-    margin-left: 25px;
 }
 
 .starship-header {
@@ -410,7 +542,7 @@
     position: relative;
     background: #212121;
     border-radius: 11px;
-    width: 233px;
+    width: 100%;
     height: 220px;
     font-family: archivo_blackregular;
     color: white;
